--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: resolve platform specific vars
-  include_vars: '{{ item }}'
+- name: Resolve platform specific vars
+  ansible.builtin.include_vars: '{{ item }}'
   with_first_found:
     - files:
         - '{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml'
@@ -9,18 +9,18 @@
       skip: true
       paths:
         - '{{ role_path }}/vars'
-- name: download
-  become: yes
+- name: Downloading {{ jk_url }} to {{ jk_exe }}
+  become: true
   become_user: root
-  get_url:
+  ansible.builtin.get_url:
     url: '{{ jk_url }}'
     dest: '{{ jk_exe }}'
-    mode: 0755
+    mode: '755'
     checksum: '{{ jk_checksum }}'
-- name: link
-  become: yes
+- name: Linking {{ jk_link }} to {{ jk_exe }}
+  become: true
   become_user: root
-  file:
+  ansible.builtin.file:
     src: '{{ jk_exe }}'
     dest: '{{ jk_link }}'
     state: link
